Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: priyanka-pod-nginx
spec:
 selector:
   matchLabels:
     run: priyanka-pod-nginx
 replicas: 1
 template:
   metadata:
     labels:
       run: priyanka-pod-nginx
   spec:
     containers:
     - name: priyanka-pod-nginx
       image: k8s.gcr.io/hpa-example
       ports:
       - containerPort: 80
       resources:
         limits:
           cpu: 500m
         requests:
           cpu: 200m
