priyanka-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: priyanka-pod-nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
