pv-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pv-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pv-nginx
  template:
    metadata:
      labels:
        app: pv-nginx
    spec:
      containers:
      - name: pv-nginx-container
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: pv-nginx-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: pv-nginx-volume
        persistentVolumeClaim:
          claimName: pv-nginx-pvc
