priyanka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: priyanka-service
spec:
  selector:
    app: priyanka-pod-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
